--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									    <div class="resume-timeline-item-desc">
 										    
 									   <p>教育技术 人机交互</p>
-								    <p>主要研究方向：智能交互 认知情绪识别与脑机界面 虚拟现实教育应用</p>
+								    <p>主要研究：智能交互 认知情绪识别与脑机界面 虚拟现实教育应用</p>
 								      <br/>
 							    </div><!--//resume-timeline-item-desc-->
 									      <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">学术兼职</h2>
