--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 											  <em>Improving Spatial Visualization and Mental Rotation Using FORSpatial Through Shapes and Letters in Virtual Environment.</em><a href="assets/documents/22.pdf" download>(PDF)</a>IEEE Transactions on Learning Technologies, 2022<br>
 											  <span class="item-buttons">
 											     <a data-toggle="collapse" href="#FORSpatial-abstract-1" class="collapsed" aria-expanded="false">
-												  <i class="far fa-sticky-note">::before</i>
+												  <i class="far fa-sticky-note"></i>
 											     </a>
 											     <a href="assets/documents/22.pdf" target="_blank">
                                                                                                  <i class="fas fa-file-pdf"></i>
