--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 										       <p>Zhou, Y., Xu, T., Yang, H., Li, S.
 											  <em>Improving Spatial Visualization and Mental Rotation Using FORSpatial Through Shapes and Letters in Virtual Environment.</em>IEEE Transactions on Learning Technologies, 2022<br>
 											  <span class="item-buttons">
-											     <a data-toggle="collapse" href="#FORSpatial-abstract-1" class="collapsed" aria-expanded="false">
+											     <a data-toggle="collapse" href="#FORSpatial-abstract-1">
 												  <i class="far fa-sticky-note"></i>
 											     </a>
 											     <a href="assets/documents/22.pdf" target="_blank">
@@ -168,7 +168,7 @@
                                                                                               </span>
 											  </span>
 										       </p>
-											<p class="abstract collapse" id="FORSpatial-abstract-1" style>
+											<p class="abstract collapse" id="FORSpatial-abstract-1">
                                                                                          <em>Abstract:</em>Existing research on spatial ability recognizes the critical role played by spatial visualization and mental rotation. Recent evidence suggests that external visualization and manipulation can boost spatial thinking. 
 										The virtual environment provides an exciting opportunity so that many spatial ability training tasks based on reading printed illustrations can be migrated to a highly 3-D interactive and visualized environment. However, few studies have employed virtual reality (VR)
                                                                                 technology to improve spatial visualization and mental rotation. In addition, the design of training contents and corresponding VR applications are still lacking. In this work, we propose FORSpatial, a system mainly for spatial ability training in a virtual environment. First, in this article, we design a novel scheme and principles for generating tasks, involving spatial visualization
