--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 <body>	
 
-        <noscript><iframe src="https://zhouyunlab.github.io/ns.html?id=G-QBSD89BQMV" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-	</noscript>
+        
 	<article class="resume-wrapper text-center position-relative">
 	    <div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
 		    <header class="resume-header pt-4 pt-md-0">
@@ -160,6 +159,7 @@
 											  <em>Improving Spatial Visualization and Mental Rotation Using FORSpatial Through Shapes and Letters in Virtual Environment.</em>IEEE Transactions on Learning Technologies, 2022<br>
 											  <span class="item-buttons">
 											     <a data-toggle="collapse" href="#FORSpatial-abstract-1">
+												     <script>$('button').click(function () {$('div').css('display', 'block')})</script>
 												  <i class="far fa-sticky-note"></i>
 											     </a>
 											     <a href="assets/documents/22.pdf" target="_blank">
