--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 											  <em>Improving Spatial Visualization and Mental Rotation Using FORSpatial Through Shapes and Letters in Virtual Environment.</em>IEEE Transactions on Learning Technologies, 2022<br>
 											  <span class="item-buttons">
 											     <a data-toggle="collapse" href="#FORSpatial-abstract-1">
-												     <script>$('button').click(function () {$('div').css('display', 'block')})</script>
+												     <script>$('FORSpatial-abstract-1').click(function () {$('div').css('display', 'block')})</script>
 												  <i class="far fa-sticky-note"></i>
 											     </a>
 											     <a href="assets/documents/22.pdf" target="_blank">
