--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/pillar-1.css">
 
-    <link href="/try/bootstrap/twitter-bootstrap-v2/docs/assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    
 </head> 
 
 <body>	
@@ -186,8 +186,8 @@ and mental rotation through flexible combinations of shapes and letters. Based o
 				                                                        </div>
 			                                                           </div>
 	                                                                       </div>    
-											      <script type="text/javascript" src="/try/bootstrap/twitter-bootstrap-v2/docs/assets/js/jquery.js"></script>
-	<script type="text/javascript" src="/try/bootstrap/twitter-bootstrap-v2/docs/assets/js/bootstrap-collapse.js"></script>
+											      <script type="text/javascript" src="/jquery.js"></script>
+	                                                                                 <script type="text/javascript" src="/bootstrap-collapse.js"></script>
                   
 										       </div>
 										       </div>
