--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
        
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/pillar-1.css">
+	
+   <link href="/bootstrap.css" rel="stylesheet" type="text/css" />
 
     
 </head> 
