--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
                                                                                               </span>
 											  </span>
 										       </p>
-											<p id="collapseOne" class="collapse" >
+											<div id="collapseOne" class="collapse" >
                                                                                          <em>Abstract:</em>Existing research on spatial ability recognizes the critical role played by spatial visualization and mental rotation. Recent evidence suggests that external visualization and manipulation can boost spatial thinking. 
 										The virtual environment provides an exciting opportunity so that many spatial ability training tasks based on reading printed illustrations can be migrated to a highly 3-D interactive and visualized environment. However, few studies have employed virtual reality (VR)
                                                                                 technology to improve spatial visualization and mental rotation. In addition, the design of training contents and corresponding VR applications are still lacking. In this work, we propose FORSpatial, a system mainly for spatial ability training in a virtual environment. First, in this article, we design a novel scheme and principles for generating tasks, involving spatial visualization
 and mental rotation through flexible combinations of shapes and letters. Based on this, we create testing questions and a FORSpatial training application in desktop VR. FORSpatial and its components are made publicly available and free to use. To evaluate the performance of spatial training, verify the usability of the FORSpatial application, and analyze learning behavior, we organized a user study with 49 .participants, including an experimental group and a control group. The comparison between experimental and control groups shows the significant improvement of spatial skills through training. The analysis of interaction logging data and subjective comments reveals how FORSpatial supports spatial thinking.   
-				                                                        </p>
+				                                                        </div>
 			                                                          
 											      <script type="text/javascript" src="/jquery.js"></script>
 	                                                                                 <script type="text/javascript" src="/bootstrap-collapse.js"></script>
