--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ and mental rotation through flexible combinations of shapes and letters. Based o
 				                                                        </p>
 			                                                     <script type="text/javascript" src="/jquery.js"></script>
                                                                              <script type="text/javascript" src="/bootstrap-collapse.js"></script>
+									     <script type="text/javascript">$(function () { $('#demo').collapse('hide')});</script>
                   
 										       </div>
 										       </div>
