--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@ and mental rotation through flexible combinations of shapes and letters. Based o
 				                                                        </p>
 			                                                     <script type="text/javascript" src="/jquery.js"></script>
                                                                             <script type="text/javascript" src="/bootstrap-collapse.js"></script>
+											      <details>
+												      <summary> <i class="far fa-sticky-note"></i></summary>
+											      Existing research on spatial ability recognizes the critical
+											      </details>
 
                   
 										       </div>
