--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 										       <p>Zhou, Y., Xu, T., Yang, H., Li, S.
 											  <em>Improving Spatial Visualization and Mental Rotation Using FORSpatial Through Shapes and Letters in Virtual Environment.</em>IEEE Transactions on Learning Technologies, 2022<br>
 								
-											    <span>
+											    <span class="item-buttons">
 					                                                      <details>
 												      <summary><em>Abstract:</em></summary>
 											      Existing research on spatial ability recognizes the critical role played by spatial visualization and mental rotation. Recent evidence suggests that external visualization and manipulation can boost spatial thinking. 
