--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 											  
 											        
 					                                                      <details>
-												      <summary><em>Abstract:</em>
+												      <summary><em>Abstract</em>
 												       <a href="assets/documents/22.pdf" target="_blank">
                                                                                                           <i class="fas fa-file-pdf"></i>
                                                                                                          </a> 
