--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
 											  
 											        
 					                                                      <details>
-												      <summary><em>Abstract            </em>
+												      <summary><em>(Abstract)</em>
 												       <a href="assets/documents/22.pdf" target="_blank">
                                                                                                           <i class="fas fa-file-pdf"></i>
                                                                                                          </a> 
 													 <span class="venue-tags">
-                                                                                                  <label class="venue-tag">                       TLT</label>
+                                                                                                  <label class="venue-tag">TLT</label>
                                                                                                      </span>
 												      </summary>
 											      Existing research on spatial ability recognizes the critical role played by spatial visualization and mental rotation. Recent evidence suggests that external visualization and manipulation can boost spatial thinking. 
