--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
 											        
 					                                                      <details>
 												      <summary><em>(Abstract)</em>
-												       <a href="assets/documents/22.pdf" target="_blank">
+												           <span>
+													      <a href="assets/documents/22.pdf" target="_blank">
                                                                                                           <i class="fas fa-file-pdf"></i>
                                                                                                          </a> 
+												           </span>
 													 <span class="venue-tags">
                                                                                                   <label class="venue-tag">TLT</label>
                                                                                                      </span>
