--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
 										    <div class="resume-position-time">期刊 </div>
 										      
 										      <div class="row g-0 publication">
-										      <div class="col-sm-4 g-0">	      
-										      <img src="assets/images/22.jpg" class="myseven">
+										      <div class="col-sm-4 g-0">
+										      <div class="row">
+										      <img src="assets/images/22.jpg" class="myseven"></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p>Zhou, Y., Xu, T., Yang, H., Li, S.
