--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 										      <div class="row g-0 publication">
 										      <div class="col-sm-4 g-0">
 										      <div class="row">
-										      <img src="assets/images/22.jpg" class="myseven"></div>
+											      <div class="col-10 pub1col">
+										      <img src="assets/images/22.jpg" class="myseven"></div></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p>Zhou, Y., Xu, T., Yang, H., Li, S.
