--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 										      <div class="col-sm-4 g-0">
 										      <div class="row">
 											      <div class="col-10 pub1col">
-										      <img src="assets/images/22.jpg" class="myseven"></div></div>
+										      <img src="assets/images/22.jpg"></div></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p>Zhou, Y., Xu, T., Yang, H., Li, S.
