--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p>Zhou, Y., Xu, T., Yang, H., Li, S.
 											  <em>Improving Spatial Visualization and Mental Rotation Using FORSpatial Through Shapes and Letters in Virtual Environment.</em>IEEE Transactions on Learning Technologies, 2022<br>
-								
 					                                                      <details>
 												      <summary><em>(Abstract)</em>
 													      <a href="assets/documents/22.pdf" target="_blank">
@@ -175,6 +174,48 @@
 										The virtual environment provides an exciting opportunity so that many spatial ability training tasks based on reading printed illustrations can be migrated to a highly 3-D interactive and visualized environment. However, few studies have employed virtual reality (VR)
                                                                                 technology to improve spatial visualization and mental rotation. In addition, the design of training contents and corresponding VR applications are still lacking. In this work, we propose FORSpatial, a system mainly for spatial ability training in a virtual environment. First, in this article, we design a novel scheme and principles for generating tasks, involving spatial visualization
 and mental rotation through flexible combinations of shapes and letters. Based on this, we create testing questions and a FORSpatial training application in desktop VR. FORSpatial and its components are made publicly available and free to use. To evaluate the performance of spatial training, verify the usability of the FORSpatial application, and analyze learning behavior, we organized a user study with 49 .participants, including an experimental group and a control group. The comparison between experimental and control groups shows the significant improvement of spatial skills through training. The analysis of interaction logging data and subjective comments reveals how FORSpatial supports spatial thinking.   
+											      </details>
+										          </p>
+										        </div>
+										       </div>
+										      
+										      <div class="row g-0 publication">
+										      <div class="col-sm-4 g-0">
+										      <div class="row">
+											      <div class="col-10 pub1col">
+										      <img src="assets/images/15.jpg"></div></div>
+										      </div>
+										      <div class="col-sm-8 p-1 pub2col"> 
+										       <p>Pi, Z., Deng, L., Wang, X., Guo, P., Xu, T., Zhou, Y.
+											  <em>The influences of a virtual instructor's voice and appearance on learning from video lectures.</em>Journal of Computer Assisted Learning, 2022<br>
+					                                                      <details>
+												      <summary><em>(Abstract)</em>
+													      <a href="assets/documents/15.pdf" target="_blank">
+                                                                                                          <i class="fas fa-file-pdf"></i>
+                                                                                                         </a> 
+													 <span class="venue-tags">
+                                                                                                  <label class="venue-tag"></label>
+                                                                                                     </span>
+												      </summary>
+											      Background: Video lectures which include the instructor's presence are becoming
+                                                                                               increasingly popular. Presenting a real human does, however, entail higher financial
+                                                                                             and time costs in making videos, and one innovative approach to reduce costs has
+                                                                                            been to generate a virtual speaking instructor.
+                                                                                           Objectives: The current study examined whether the use of a virtual instructor in
+                                                                                          video lectures would facilitate learning as well as a human instructor, and whether
+                                                                                            manipulating the virtual instructor's characteristics (i.e., voice and appearance) might
+                                                                                           optimize the effectiveness of the virtual instructor.
+                                                                                      Methods: Our study set four conditions. In the control condition, students watched a
+                                                                                      human instructor. In the experiment conditions, students watched one of (a) a virtual
+                                                                                       instructor which used the human instructor's voice and an AI image, (b) a virtual
+                                                                                       instructor which spoke in an AI voice with an AI image made to speak using text-to-speech and lip synthesis techniques, or (c) a virtual instructor with used an AI voice
+                                                                                        and an AI likable-image of an instructor.
+                                                                                        Results and Conclusions: The AI likable instructor condition had a significant positive
+                                                                                    effect on students' learning performance and motivation, without decreasing the
+                                                                                   attention students paid to the learning materials.
+                                                                                    Implications: Our findings suggest that instructional video designers can make use of
+                                                                                 AI voices and AI images of likable humans as instructors to motivate students and
+                                                                               enhance their learning performance.
 											      </details>
 										          </p>
 										        </div>
