--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ and mental rotation through flexible combinations of shapes and letters. Based o
                                                                                                          </a> 
 													 
 												      </summary>
-											    The brain is a complex and dynamic system, consisting of interacting sets and the temporal evolution of these sets. Electroencephalogram (EEG) recordings of brain activity play a vital role to decode the cognitive process of human beings in learning
+											    The brain is a complex and dynamic system, consisting of interacting sets and the temporal evolution of these sets. Electroencephalogram (EEG) recordings of brain activity play a vital role to decode the cognitive process of human beings in learning
 research and application areas. In the real world, people react to stimuli differently, and the duration of brain activities varies
 between individuals. ,erefore, the length of EEG recordings in trials gathered in the experiment is variable. However, current
 approaches either fix the length of EEG recordings in each trial which would lose information hidden in the data or use the sliding
@@ -391,7 +391,7 @@ adaption in real tasks.
                                                                                                          </a> 
 													 
 												      </summary>
-											    The fine-grained access control has been proved to be a reliable tool to ensure preserving of privacy of end users. In fog computing, one of the challenges is to understand users' attitudes and
+											    The fine-grained access control has been proved to be a reliable tool to ensure preserving of privacy of end users. In fog computing, one of the challenges is to understand users' attitudes and
 behaviors toward personalized control. However, few of studies have given a clear view on users'
 perception of the burden of interactivity when they set complex privacy settings. To this end, we
 conducted a user study including a lab study with 26 participants and an evaluation with 223
