--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ in other application areas.
                                                                                                          </a> 
 													 
 												      </summary>
-											    Confusion is an emotion, which may occur when the learner is confronting inconsistence between new knowledge and existing cognitive structure, or reasoning for solving the puzzle and problem. Although confusion is not pleasant, it is necessary 
+											    Confusion is an emotion, which may occur when the learner is confronting inconsistence between new knowledge and existing cognitive structure, or reasoning for solving the puzzle and problem. Although confusion is not pleasant, it is necessary 
 for the learner to engage in understanding and deep learning. Consequently, confusion assessment has attracted increased 
 interest in e-learning. However, current studies have targeted no further than engagement detection and measurement, while 
 there is lack of studies in investigating cognitive and emotional aspects beyond engagement in the context of game-based 
