--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
 									
 									    <div class="resume-timeline-item-desc">
 										    
-									   <p>An Introduction to Programming Using Visual Basic</p>
+									   <p>An Introduction to Python Programming</p>
 								    <p>HCI and E-learning Design Principles</p>
 								    <p>Educational Data mining</p>
 								    <p>Data Analysis and Machine Learning Techniques</p>
