--- a/about.html
+++ b/about.html
@@ -82,7 +82,8 @@
 										    <div class="resume-position-time"></div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										     <p>Intelligent user interfaces, brain-computer interfaces, learning emotions, virtual reality educational applications</p>
+										     <p>Virtual Reality，3D learning resources，Research on the Application of Intelligent Interaction in Education，Research on Cognitive Emotional Recognition and Educational Brain-Computer Interfaces,Research on the Difficulties and Solutions of Artificial Intelligence Technology in Accurately Assisting Rural Teachers
+											     //Intelligent user interfaces, brain-computer interfaces, learning emotions, virtual reality educational applications</p>
 								                  
 										    <br/>
 										     </div><!--//resume-timeline-item-desc-->
