--- a/about.html
+++ b/about.html
@@ -97,6 +97,8 @@
 								    <p>HCI and E-learning Design Principles</p>
 								    <p>Educational Data mining</p>
 								    <p>Data Analysis and Machine Learning Techniques</p>
+								<p>Construction and Application of Virtual Reality Teaching Resources</p>
+								<p>Education Software and Big Data</p>
 										    <br/>
 							    </div><!--//resume-timeline-item-desc-->
 									   
