--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 										    <div class="resume-position-time"></div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										     <p>Virtual Reality，3D learning resources，Research on the Application of Intelligent Interaction in Education，Research on Cognitive Emotional Recognition and Educational Brain-Computer Interfaces,Research on the Difficulties and Solutions of Artificial Intelligence Technology in Accurately Assisting Rural Teachers
+										     <p>Virtual Reality，3D learning resources，Educational Applications of Intelligent Interfaces，Cognitive and Emotional States Recognition and Educational Brain-Computer Interfaces ,Artificial Intelligence Applications in Rural Classrooms
 											    <!--//Intelligent user interfaces, brain-computer interfaces, learning emotions, virtual reality educational applications--></p>
 								                  
 										    <br/>
@@ -98,7 +98,7 @@
 								    <p>Educational Data mining</p>
 								    <p>Data Analysis and Machine Learning Techniques</p>
 								<p>Construction and Application of Virtual Reality Teaching Resources</p>
-								<p>Education Software and Big Data</p>
+								<p>Educational Software and Big Data</p>
 										    <br/>
 							    </div><!--//resume-timeline-item-desc-->
 									   
