--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 										    <div class="resume-position-time"></div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										     <p>Virtual Reality，3D learning resources，Educational Applications of Intelligent Interfaces，Cognitive and Emotional States Recognition and Educational Brain-Computer Interfaces ,Artificial Intelligence Applications in Rural Classrooms
+										     <p>Virtual Reality,3D learning resources,Educational Applications of Intelligent Interfaces,Cognitive and Emotional States Recognition and Educational Brain-Computer Interfaces,Artificial Intelligence Applications in Rural Classrooms
 											    <!--//Intelligent user interfaces, brain-computer interfaces, learning emotions, virtual reality educational applications--></p>
 								                  
 										    <br/>
