--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
 										      <img src="assets/images/28.jpg"></div></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
-										       <p> Xu,T., Wang,J., Zhang,G., Zhang,L., Zhou,Y. 
-											  <em>Confused or not: decoding brain activity and recognizing confusion in reasoning learning using EEG.</em>Journal of Neural Engineering,20(2),2023<br>
+										       <p> Xu,T., Wang,J., Zhang,G., Zhang,L., Zhou,Y.<br>
+											  <em>Confused or not: decoding brain activity and recognizing confusion in reasoning learning using EEG.</em><br>
+											      Journal of Neural Engineering,20(2),2023,IOP Publishing,SCI二区,IF：5.043<br>
 					                                                      <details>
 												      <summary><em>(Abstract)</em>
 													      <a href="assets/documents/28.pdf" target="_blank">
