--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 										      <div class="col-sm-4 g-0">
 										      <div class="row">
 											      <div class="col-10 pub1col">
-										      <img src="assets/images/31.png"></div></div> 
+										      <img src="assets/images/31.jpg"></div></div> 
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p> J Bai, X Cheng, H Zhang, Y Qin, T Xu, Y Zhou.<br>
@@ -181,7 +181,7 @@
 										      <div class="col-sm-4 g-0">
 										      <div class="row">
 											      <div class="col-10 pub1col">
-										      <img src="assets/images/34.png"></div></div>
+										      <img src="assets/images/34.jpg"></div></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p> T Xu, Y Liu, Y Jin, Y Qu, J Bai, W Zhang, Y Zhou.<br>
@@ -233,7 +233,7 @@ GAI in educational settings.
 										      <div class="col-sm-4 g-0">
 										      <div class="row">
 											      <div class="col-10 pub1col">
-										      <img src="assets/images/36.png"></div></div>
+										      <img src="assets/images/36.jpg"></div></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p> Y Zhou, F Yi, B Dong, G Zhang, Y Zhang, T Xu.<br>
@@ -257,7 +257,7 @@ GAI in educational settings.
 										      <div class="col-sm-4 g-0">
 										      <div class="row">
 											      <div class="col-10 pub1col">
-										      <img src="assets/images/32.png"></div></div>
+										      <img src="assets/images/32.jpg"></div></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p> H Zhang, Y Zhang, T Xu, Y Zhou.<br>
@@ -796,7 +796,7 @@ based on our context-aware middleware.
 										      <div class="col-sm-4 g-0">
 										      <div class="row">
 											      <div class="col-10 pub1col">
-										      <img src="assets/images/35.png"></div></div>
+										      <img src="assets/images/35.jpg"></div></div>
 										      </div>
 										      <div class="col-sm-8 p-1 pub2col"> 
 										       <p>B Dong, J Bai, T Xu, Y Zhou.<br>
